# Metaboglobe

./: README.md  pyproject.toml
src/metaboglobe/: __init__.py  _util.py  compass_data.py  compass_plotting.py  kegg_pathway.py  kegg_plotting.py  tabular_data.py
src/metaboglobe/data/: kegg_compounds.tsv
src/metaboglobe/math/: curve_2d.py  vector_2d.py
src/metaboglobe/plotting/: __init__.py  _box_2d.py  _collision_map.py  _curve_2d.py  _kegg_plotting.py  _text.py  _text_size.py  _vector_2d.py  kegg_plotting.py
test/: test_box_2d.py  test_kegg_pathway.py  test_tabular_data.py  test_util.py
